book-info/virtual-service-reviews-v1-v2-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 30
    - destination:
        host: reviews
        subset: v2
      weight: 35
    - destination:
        host: reviews
        subset: v3
      weight: 35
